GollyRleParser.java
// Generated from GollyRle.g4 by ANTLR 4.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GollyRleParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ASSGNX=1, ASSGNY=2, CA_RULE=3, ENDLINE=4, END_PATTERN=5, SINGLE_INACTIVE_STATE=6, 
		MULTI_INACTIVE_STATE=7, SINGLE_ACTIVE_STATE=8, PREFIX_STATE=9, MULTI_ACTIVE_STATE=10, 
		COMMENT=11, UINT=12, COMMA=13, EQUAL=14, HASH=15, EXLAM=16, NEWLINE=17, 
		WS=18;
	public static final String[] tokenNames = {
		"<INVALID>", "ASSGNX", "ASSGNY", "CA_RULE", "'$'", "END_PATTERN", "'b'", 
		"'.'", "'o'", "PREFIX_STATE", "MULTI_ACTIVE_STATE", "COMMENT", "UINT", 
		"','", "'='", "'#'", "'!'", "NEWLINE", "WS"
	};
	public static final int
		RULE_rle = 0, RULE_header = 1, RULE_width = 2, RULE_height = 3, RULE_pattern = 4, 
		RULE_row = 5, RULE_finalRow = 6, RULE_cellPattern = 7, RULE_cell_state = 8, 
		RULE_activeState = 9, RULE_inactiveState = 10, RULE_endRow = 11;
	public static final String[] ruleNames = {
		"rle", "header", "width", "height", "pattern", "row", "finalRow", "cellPattern", 
		"cell_state", "activeState", "inactiveState", "endRow"
	};

	@Override
	public String getGrammarFileName() { return "GollyRle.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GollyRleParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class RleContext extends ParserRuleContext {
		public TerminalNode NEWLINE() { return getToken(GollyRleParser.NEWLINE, 0); }
		public TerminalNode EOF() { return getToken(GollyRleParser.EOF, 0); }
		public PatternContext pattern() {
			return getRuleContext(PatternContext.class,0);
		}
		public TerminalNode COMMENT(int i) {
			return getToken(GollyRleParser.COMMENT, i);
		}
		public HeaderContext header() {
			return getRuleContext(HeaderContext.class,0);
		}
		public List<TerminalNode> COMMENT() { return getTokens(GollyRleParser.COMMENT); }
		public RleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rle; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GollyRleListener ) ((GollyRleListener)listener).enterRle(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GollyRleListener ) ((GollyRleListener)listener).exitRle(this);
		}
	}

	public final RleContext rle() throws RecognitionException {
		RleContext _localctx = new RleContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_rle);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(27);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMENT) {
				{
				{
				setState(24); match(COMMENT);
				}
				}
				setState(29);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(30); header();
			setState(34);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMENT) {
				{
				{
				setState(31); match(COMMENT);
				}
				}
				setState(36);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(37); pattern();
			setState(39);
			_la = _input.LA(1);
			if (_la==NEWLINE) {
				{
				setState(38); match(NEWLINE);
				}
			}

			setState(44);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMENT) {
				{
				{
				setState(41); match(COMMENT);
				}
				}
				setState(46);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(47); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HeaderContext extends ParserRuleContext {
		public TerminalNode NEWLINE() { return getToken(GollyRleParser.NEWLINE, 0); }
		public HeightContext height() {
			return getRuleContext(HeightContext.class,0);
		}
		public List<TerminalNode> WS() { return getTokens(GollyRleParser.WS); }
		public List<TerminalNode> COMMA() { return getTokens(GollyRleParser.COMMA); }
		public TerminalNode CA_RULE() { return getToken(GollyRleParser.CA_RULE, 0); }
		public TerminalNode WS(int i) {
			return getToken(GollyRleParser.WS, i);
		}
	  public WidthContext width() {
			return getRuleContext(WidthContext.class,0);
		}
		public TerminalNode COMMA(int i) {
			return getToken(GollyRleParser.COMMA, i);
		}
		public HeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
	  @Override public int getRuleIndex() { return RULE_header; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GollyRleListener ) ((GollyRleListener)listener).enterHeader(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GollyRleListener ) ((GollyRleListener)listener).exitHeader(this);
		}
	}

	public final HeaderContext header() throws RecognitionException {
		HeaderContext _localctx = new HeaderContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_header);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49); width();
			setState(51);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(50); match(WS);
				}
			}

			setState(53); match(COMMA);
			setState(55);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(54); match(WS);
				}
			}

			setState(57); height();
			setState(59);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(58); match(WS);
				}
				break;
			}
			setState(63);
			_la = _input.LA(1);
			if (_la==COMMA) {
				{
				setState(61); match(COMMA);
				setState(62); match(CA_RULE);
				}
			}

			setState(66);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(65); match(WS);
				}
			}

			setState(69);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				{
				setState(68); match(NEWLINE);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WidthContext extends ParserRuleContext {
		public TerminalNode UINT() { return getToken(GollyRleParser.UINT, 0); }
		public TerminalNode ASSGNX() { return getToken(GollyRleParser.ASSGNX, 0); }
		public WidthContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_width; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GollyRleListener ) ((GollyRleListener)listener).enterWidth(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GollyRleListener ) ((GollyRleListener)listener).exitWidth(this);
		}
	}

	public final WidthContext width() throws RecognitionException {
		WidthContext _localctx = new WidthContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_width);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71); match(ASSGNX);
			setState(72); match(UINT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HeightContext extends ParserRuleContext {
		public TerminalNode UINT() { return getToken(GollyRleParser.UINT, 0); }
		public TerminalNode ASSGNY() { return getToken(GollyRleParser.ASSGNY, 0); }
		public HeightContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_height; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GollyRleListener ) ((GollyRleListener)listener).enterHeight(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GollyRleListener ) ((GollyRleListener)listener).exitHeight(this);
		}
	}

	public final HeightContext height() throws RecognitionException {
		HeightContext _localctx = new HeightContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_height);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74); match(ASSGNY);
			setState(75); match(UINT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PatternContext extends ParserRuleContext {
		public FinalRowContext finalRow() {
			return getRuleContext(FinalRowContext.class,0);
		}
		public RowContext row(int i) {
			return getRuleContext(RowContext.class,i);
		}
		public List<RowContext> row() {
			return getRuleContexts(RowContext.class);
		}
		public PatternContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pattern; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GollyRleListener ) ((GollyRleListener)listener).enterPattern(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GollyRleListener ) ((GollyRleListener)listener).exitPattern(this);
		}
	}

	public final PatternContext pattern() throws RecognitionException {
		PatternContext _localctx = new PatternContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_pattern);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(77); row();
					}
					} 
				}
				setState(82);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			}
			setState(83); finalRow();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RowContext extends ParserRuleContext {
		public TerminalNode NEWLINE() { return getToken(GollyRleParser.NEWLINE, 0); }
		public EndRowContext endRow() {
			return getRuleContext(EndRowContext.class,0);
		}
		public CellPatternContext cellPattern(int i) {
			return getRuleContext(CellPatternContext.class,i);
		}
		public List<CellPatternContext> cellPattern() {
			return getRuleContexts(CellPatternContext.class);
		}
		public RowContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_row; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GollyRleListener ) ((GollyRleListener)listener).enterRow(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GollyRleListener ) ((GollyRleListener)listener).exitRow(this);
		}
	}

	public final RowContext row() throws RecognitionException {
		RowContext _localctx = new RowContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_row);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(85); cellPattern();
					}
					} 
				}
				setState(90);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			}
			setState(92);
			_la = _input.LA(1);
			if (_la==NEWLINE) {
				{
				setState(91); match(NEWLINE);
				}
			}

			setState(97);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(94); cellPattern();
					}
					} 
				}
				setState(99);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
			}
			setState(100); endRow();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FinalRowContext extends ParserRuleContext {
		public TerminalNode END_PATTERN() { return getToken(GollyRleParser.END_PATTERN, 0); }
		public CellPatternContext cellPattern(int i) {
			return getRuleContext(CellPatternContext.class,i);
		}
		public List<CellPatternContext> cellPattern() {
			return getRuleContexts(CellPatternContext.class);
		}
		public RowContext row() {
			return getRuleContext(RowContext.class,0);
		}
		public TerminalNode ENDLINE() { return getToken(GollyRleParser.ENDLINE, 0); }
		public FinalRowContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_finalRow; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GollyRleListener ) ((GollyRleListener)listener).enterFinalRow(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GollyRleListener ) ((GollyRleListener)listener).exitFinalRow(this);
		}
	}

	public final FinalRowContext finalRow() throws RecognitionException {
		FinalRowContext _localctx = new FinalRowContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_finalRow);
		int _la;
		try {
			setState(113);
			switch ( getInterpreter().adaptivePredict(_input,16,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(102); row();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(104); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(103); cellPattern();
					}
					}
					setState(106); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SINGLE_INACTIVE_STATE) | (1L << MULTI_INACTIVE_STATE) | (1L << SINGLE_ACTIVE_STATE) | (1L << PREFIX_STATE) | (1L << MULTI_ACTIVE_STATE) | (1L << UINT))) != 0) );
				setState(109);
				_la = _input.LA(1);
				if (_la==ENDLINE) {
					{
					  setState(108); match(ENDLINE);
					}
				}

				setState(111); match(END_PATTERN);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CellPatternContext extends ParserRuleContext {
		public Cell_stateContext cell_state() {
			return getRuleContext(Cell_stateContext.class,0);
		}
		public TerminalNode UINT() { return getToken(GollyRleParser.UINT, 0); }
		public CellPatternContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cellPattern; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GollyRleListener ) ((GollyRleListener)listener).enterCellPattern(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GollyRleListener ) ((GollyRleListener)listener).exitCellPattern(this);
		}
	}

	public final CellPatternContext cellPattern() throws RecognitionException {
		CellPatternContext _localctx = new CellPatternContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_cellPattern);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			_la = _input.LA(1);
			if (_la==UINT) {
				{
				setState(115); match(UINT);
				}
			}

			setState(118); cell_state();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Cell_stateContext extends ParserRuleContext {
		public ActiveStateContext activeState() {
			return getRuleContext(ActiveStateContext.class,0);
		}
		public InactiveStateContext inactiveState() {
			return getRuleContext(InactiveStateContext.class,0);
		}
		public Cell_stateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cell_state; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GollyRleListener ) ((GollyRleListener)listener).enterCell_state(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GollyRleListener ) ((GollyRleListener)listener).exitCell_state(this);
		}
	}

	public final Cell_stateContext cell_state() throws RecognitionException {
		Cell_stateContext _localctx = new Cell_stateContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_cell_state);
		try {
			setState(122);
			switch (_input.LA(1)) {
			case SINGLE_ACTIVE_STATE:
			case PREFIX_STATE:
			case MULTI_ACTIVE_STATE:
				enterOuterAlt(_localctx, 1);
				{
				setState(120); activeState();
				}
				break;
			case SINGLE_INACTIVE_STATE:
			case MULTI_INACTIVE_STATE:
				enterOuterAlt(_localctx, 2);
				{
				setState(121); inactiveState();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ActiveStateContext extends ParserRuleContext {
		public ActiveStateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_activeState; }
	 
		public ActiveStateContext() { }
		public void copyFrom(ActiveStateContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class MultiActiveContext extends ActiveStateContext {
		public TerminalNode MULTI_ACTIVE_STATE() { return getToken(GollyRleParser.MULTI_ACTIVE_STATE, 0); }
		public TerminalNode PREFIX_STATE() { return getToken(GollyRleParser.PREFIX_STATE, 0); }
		public MultiActiveContext(ActiveStateContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GollyRleListener ) ((GollyRleListener)listener).enterMultiActive(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GollyRleListener ) ((GollyRleListener)listener).exitMultiActive(this);
		}
	}
	public static class SingleActiveContext extends ActiveStateContext {
		public TerminalNode SINGLE_ACTIVE_STATE() { return getToken(GollyRleParser.SINGLE_ACTIVE_STATE, 0); }
		public SingleActiveContext(ActiveStateContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GollyRleListener ) ((GollyRleListener)listener).enterSingleActive(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GollyRleListener ) ((GollyRleListener)listener).exitSingleActive(this);
		}
	}

	public final ActiveStateContext activeState() throws RecognitionException {
		ActiveStateContext _localctx = new ActiveStateContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_activeState);
		int _la;
		try {
			setState(129);
			switch (_input.LA(1)) {
			case SINGLE_ACTIVE_STATE:
				_localctx = new SingleActiveContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(124); match(SINGLE_ACTIVE_STATE);
				}
				break;
			case PREFIX_STATE:
			case MULTI_ACTIVE_STATE:
				_localctx = new MultiActiveContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(126);
				_la = _input.LA(1);
				if (_la==PREFIX_STATE) {
					{
					setState(125); match(PREFIX_STATE);
					}
				}

				setState(128); match(MULTI_ACTIVE_STATE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InactiveStateContext extends ParserRuleContext {
		public InactiveStateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inactiveState; }
	 
		public InactiveStateContext() { }
		public void copyFrom(InactiveStateContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class SingleInactiveContext extends InactiveStateContext {
		public TerminalNode SINGLE_INACTIVE_STATE() { return getToken(GollyRleParser.SINGLE_INACTIVE_STATE, 0); }
		public SingleInactiveContext(InactiveStateContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GollyRleListener ) ((GollyRleListener)listener).enterSingleInactive(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GollyRleListener ) ((GollyRleListener)listener).exitSingleInactive(this);
		}
	}
	public static class MultiInactiveContext extends InactiveStateContext {
		public TerminalNode MULTI_INACTIVE_STATE() { return getToken(GollyRleParser.MULTI_INACTIVE_STATE, 0); }
		public MultiInactiveContext(InactiveStateContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GollyRleListener ) ((GollyRleListener)listener).enterMultiInactive(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GollyRleListener ) ((GollyRleListener)listener).exitMultiInactive(this);
		}
	}

	public final InactiveStateContext inactiveState() throws RecognitionException {
		InactiveStateContext _localctx = new InactiveStateContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_inactiveState);
		try {
			setState(133);
			switch (_input.LA(1)) {
			case SINGLE_INACTIVE_STATE:
				_localctx = new SingleInactiveContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(131); match(SINGLE_INACTIVE_STATE);
				}
				break;
			case MULTI_INACTIVE_STATE:
				_localctx = new MultiInactiveContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(132); match(MULTI_INACTIVE_STATE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EndRowContext extends ParserRuleContext {
		public TerminalNode UINT() { return getToken(GollyRleParser.UINT, 0); }
		public TerminalNode ENDLINE() { return getToken(GollyRleParser.ENDLINE, 0); }
		public EndRowContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_endRow; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GollyRleListener ) ((GollyRleListener)listener).enterEndRow(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GollyRleListener ) ((GollyRleListener)listener).exitEndRow(this);
		}
	}

	public final EndRowContext endRow() throws RecognitionException {
		EndRowContext _localctx = new EndRowContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_endRow);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			_la = _input.LA(1);
			if (_la==UINT) {
				{
				setState(135); match(UINT);
				}
			}

			setState(138); match(ENDLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}
